<resources>
    <string name="app_name">Snappy</string>
    <!--fbId dev, remember change BASE_URL in ApiClient.java, too-->
    <!--<string name="facebook_app_id">657038454466118</string>-->
    <!--fbId prod, remember change BASE_URL in ApiClient.java, too-->
    <string name="facebook_app_id">1796589060623403</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email_phone_number">Nhập email/số điện thoại</string>
    <string name="hint_password">Nhập mật khẩu</string>
    <string name="btn_text_Login">Đăng nhập</string>
    <string name="snappy_express">Snappy Express</string>
    <string name="fb_login_text">Đăng nhập Facebook</string>
    <string name="fb_logout_text">Đăng xuất</string>
    <string name="access_token">""</string>
    <string name="name">name</string>
    <string name="hello">"Xin chào "</string>
    <string name="fbId">fbId</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="email">email</string>
    <string name="gender">gender</string>
    <string name="birthday">birthday</string>
    <string name="location">location</string>
    <string name="profile_pic">profile_pic</string>
    <string name="id">id</string>
    <string name="cancel">Hủy</string>
    <string name="scan_barcode">Quét mã</string>
    <string name="picked_up_trackings">Đơn hàng đã nhận</string>
    <string name="login_fail_message">Đăng nhập thất bại vui lòng kiểm tra lại thông tin và thử lại</string>
    <string name="tracking_id">Mã vận đơn:</string>
    <string name="receiver_name">Người nhận:</string>
    <string name="receiver_phone_number">Số điện thoại:</string>
    <string name="receiver_address">Địa chỉ:</string>
    <string name="current_status">Trạng thái:</string>
    <string name="package_desc">Mô tả hàng hóa:</string>
    <string name="total_cod">Thu hộ:</string>
    <string name="tracking">tracking</string>
    <string name="format_number">#,###,###</string>
    <string name="vnd">" đ"</string>
    <string name="back">Quay lại</string>
    <string name="picked_up_vi">Đã nhận hàng</string>
    <string name="picked_up">picked_up</string>
    <string name="last_note">Ghi chú</string>
    <string name="arrow_right">arrow right</string>
    <string name="on_the_way_vi">Giao kho</string>
    <string name="on_the_way">on_the_way</string>
    <string name="out_for_delivery_vi">Đang giao hàng</string>
    <string name="out_for_delivery">out_for_delivery</string>
    <string name="delivered_vi">Đã giao hàng</string>
    <string name="delivered">delivered</string>
    <string name="undeliverable_vi">Giao không thành công</string>
    <string name="undeliverable">undeliverable</string>
    <string name="returning_vi">Đang hoàn</string>
    <string name="returning">returning</string>
    <string name="returned_vi">Đã hoàn</string>
    <string name="returned">returned</string>
    <string name="new_note">Ghi chú mới</string>
    <string name="enter_new_note">Nhập ghi chú mới</string>
    <string name="wrong_tracking_id">Sai mã vận đơn</string>
    <string name="no_result">Không tìm thấy dữ liệu</string>
    <string name="maiman_balance">Tiền đang giữ:</string>
    <string name="register">Đăng ký</string>
    <string name="create_user">Tạo tài khoản</string>
    <string name="hint_name">Nhập tên</string>
    <string name="hint_phone_number">Nhập số điện thoại</string>
    <string name="hint_email">Nhập email</string>
    <string name="hint_re_password">Nhập lại mật khẩu</string>
    <string name="register_warning">Vui lòng nhập tên, số điện thoại và mật khẩu</string>
    <string name="register_warning2">Vui lòng nhập lại mật khẩu</string>
    <string name="register_warning3">Mật khẩu nhập lại không khớp</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="hint_new_password">Nhập mật khẩu mới</string>
    <string name="hint_renew_password">Nhập lại mật khẩu mới</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="change_password_warning1">Vui lòng nhập mật khẩu</string>
    <string name="change_password_warning2">Vui lòng nhập mật khẩu mới</string>
    <string name="change_password_warning3">Mật khẩu bạn nhập lại không khớp</string>
    <string name="hint_current_password">Nhập mật khẩu hiện tại</string>
    <string name="status_color">status_color</string>
    <string name="request_received">Đã khởi tạo</string>
    <string name="shipping_trackings">Đơn hàng đang giao</string>
    <string name="get_location_fail">Không thể định vị được vị trí của bạn</string>
    <string name="warning">Cảnh báo!</string>
    <string name="transfer_all_warning_message">Bạn có muốn giao kho tất cả đơn hàng bạn đã nhận?</string>
    <string name="setting">Cài đặt</string>
    <string name="submit">Duyệt</string>
    <string name="error">Lỗi</string>
    <string name="get_fb_info_error">Đã có lỗi khi lấy thông tin từ tài khoản Facebook của bạn. Vui lòng kiểm tra lại thông tin va thử lại sau</string>
</resources>
