<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/tracking_id" />

        <TextView
            android:id="@+id/tv_tracking_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/tracking_id"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/receiver_name" />

        <TextView
            android:id="@+id/tv_receiver_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/receiver_name"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/receiver_address" />

        <TextView
            android:id="@+id/tv_receiver_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/receiver_address"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/receiver_phone_number" />

        <TextView
            android:id="@+id/tv_receiver_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autoLink="all"
            android:text="@string/receiver_phone_number"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/package_desc" />

        <TextView
            android:id="@+id/tv_package_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/package_desc"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/total_cod" />

        <TextView
            android:id="@+id/tv_total_cod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/total_cod"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/current_status" />

        <TextView
            android:id="@+id/tv_current_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/current_status"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/last_note" />

        <TextView
            android:id="@+id/tv_last_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:autoLink="all"
            android:text="@string/last_note"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/new_note" />

        <EditText
            android:id="@+id/tv_new_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/enter_new_note"
            android:lines="2"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_picked_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/picked_up_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_on_the_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/on_the_way_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_out_for_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/out_for_delivery_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_delivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/delivered_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_undeliverable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/undeliverable_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_returning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/returning_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_returned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/deepOrange500"
        android:text="@string/returned_vi"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>