<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="90"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_tracking_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/tracking_id"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/current_status"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="4"
                android:background="@drawable/arrow_right"
                android:contentDescription="@string/arrow_right" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>